--- a/incentivizing_rewarding_participants.adoc
+++ b/incentivizing_rewarding_participants.adoc
@@ -14,21 +14,34 @@ In this chapter, we'll discuss various models and mechanisms for encouraging, in
 
 == On incentives and rewards
 
-{This section provides useful context and explanation regarding the nature of rewards and reward systems in open source commmunities.}
+Open source community managers and architects strive to create places where participants feel valued for the contributions they make.
+When contributors feel as though their work matters, they're more likely to _continue_ contributing to a project, enhancing the community and impacting its culture as they do.
+Contributors derive the most value from participating in an open source project when the project satisfies or otherwise _rewards_ their motivations for contributing in the first place.
+For community architects, the crux of the challenge in creating rewarding contributor experiences is aligning participant motivations with various models and mechanisms for rewarding project contributions.
 
-- https://opensource.com/article/17/10/managing-casual-contributors[Episodic volunteering]
-- https://opensource.com/article/21/4/motivates-open-source-contributors[New research on motivations]
+But not everyone contributres to open source projects for the same reasons.
+For example, https://arxiv.org/abs/2101.10291[recent research on motivations] for contributing to open source projects suggests that altruism and kinship-seeking impact contributor motivations more significantly than they did a decade ago.
+Moreover, participants report that their motivations for _continuing_ contributions to a project aren't always the same as their motivations for _initially contributing_ to a project.
+Someone may join a project in order to contribute a patch her employer wanted to see adopted upstream, but remain in the project after identifying project participants as a peer group and developing a sense of kinship with members.
+Building open source communities involves responding to contributors' continually shifting motivations for participating with new activities and opportunities from which they might derive value, incentivizing them to continue contributing.
 
-- Tapping into contributors' motivations for participating in the project
-- Aligning community activities with project goals and timelines
-- Risks of incentivizing behaviors and patterns you don't wish to cultivate
+Not every contributor to your open source project will develop a deep level of investment in the project.
+You won't always be able to convert infrequent, casual contributors into consistent, repeat contributors—nor should that necessarily be your goal.
+More important is understanding how participants' contributions align with or reflect their motivations for _making_ those contributions—and responding accordingly.
+As https://opensource.com/article/17/10/managing-casual-contributors[researcher Ann Barcomb writes], "People who contribute to boost their CV or to fix an irritating bug are less likely to continue once their need is satisfied."
+Alternatively, however, these periodic contributors (or what Barcomb calls "episodic contributors") often seek low-complexity, easily explainable, and quickly addressable issues—the very kinds of issues long-time contributors would love to see others solve so they can focus on other matters.
+Community managers therefore shouldn't strive to create experiences _they believe_ will motivate everyone to join and contribute to the project as much as they should work to understanding participants' _own_ motivations for contributing to projects, then architecting project experiences that activate and satisfy those motivations, leading (presumably) to greater engagement.
+This is critical not only because it puts community members and their needs first, but also because it allows contributors with varying degrees of time, resources, knowledge, and skill to engage a project in ways that feel comfortable for them—and feel rewarded in just the same ways others might.
 
 == Understanding a project's reward models
 
 Strategies for acknowledging and honoring various contributions to an open source project are called that project's "reward models."
 The more reward models your project constructs, the better it can engage participants with differing motivations for contributing.
-Everyone contributes to projects for different reasons, and the most popular projects are those that make contributors feel rewarded, valued, and respected for their contributions—whatever form they happen to take.
+As we've already noted, everyone contributes to projects for different reasons, and the most popular projects are those that make contributors feel rewarded, valued, and respected for their contributions—whatever form they happen to take.
 Generating those feelings in contributors is a great way to build your project's reputation as a rewarding, welcoming place.
+But always remember that your community's reward models will _incentivize_ the very practices they _reward_; when people understand how a community recognizes and honors its participants, they'll engage in the behaviors they seem a community rewards in this way.
+Community managers and architects should therefore always think carefully and act deliberately when establishing and modifying a project's particular reward model.
+What they reward—either intentionally or unintentionally—is what they'll be encouraging people to do more of.
 
 In what remains of this chapter, we'll outline some of the more popular reward models open source projects use today.
 As each of these models aims to connect with a certain set of motivations participants may have for contributing to a project, we'll elaborate situations in which a particular model might be most useful.
